<resources>
    <string name="app_name">Contacts</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="add_contact">Add Contact</string>
    <string name="call_or_message">Do you wanna call or send message?</string>
    <string name="call">Call</string>
    <string name="send_message">Send message</string>
</resources>
